[tool.poetry]
name = "goit-pythonweb-hw-04"
version = "0.1.0"
description = ""
authors = ["vkletsko <v.kletsko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiopath = "0.6.11"
aioshutil = "1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
